# aws-iam-db

./: .gitignore  README.md  actions.json  actions.shasum  app.py  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yaml
aws_iam_db/: __main__.py  build_db.py  docs.py
iam_policy_db/: build_db.py  cognito.py  iam_policy_db.py  iam_policy_db_loader.py  iam_policy_db_stack.py  parliament.py
loader/: loader.py  requirements.txt
