[metadata]
name = aws-iam-db
version = 0.0.2
author = Zak Scholl
author_email = zak@zakscholl.com
description = Creates a sqlite database of AWS IAM actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zscholl/aws-iam-db
project_urls =
    Bug Tracker = https://github.com/zscholl/aws-iam-db/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    typer
    beautifulsoup4
    sqlalchemy
    requests

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    aws-iam-db = aws_iam_db.__main__:main